--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             
             <!-- CAJA PRINCIPAL -->
             <div id="principal">
-                <h1>Últimas entradas</h1>
+                <h1>CHISMES</h1>
                 <article class="entrada">
                     <a href="entrada.php?id=<?=$entrada['id']?>">
                         <h2>{Titulo Entrada}</h2>
