--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </article>
                 
                 <div id="ver-todas">
-                    <a href="entradas.php">Ver todas las entradas</a>
+                    <a href="categoria.php">Ver todas las entradas</a>
                 </div>
             </div> <!--fin principal-->
             
