le meti estilasos papi
chale

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 
                 <div id="usuario-logueado" class="bloque">
-                    <h3>Bienvenido, {Nombre Usuario}</h3>
+                    <h3 id="Bienvenido">Bienvenido, {Nombre Usuario}</h3>
                     <!--botones-->
                     <a href="crear-entrada.php" class="boton boton-verde">{Crear entradas}</a>
                     <a href="crear-categoria.php" class="boton">{Crear categoria}</a>
