Aca esta ya mas el css mejoradoxd
lolloololol

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Chismes</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <link rel="icono" href="assets/img/imagen._icono.ico">
     </head>
     <body>
         <!-- CABECERA -->
@@ -54,7 +55,7 @@
                 </div>
                 
                 <div id="usuario-logueado" class="bloque">
-                    <h3 id="Bienvenido">Bienvenido, {Nombre Usuario}</h3>
+                    <h3 id="Bienvenido">Bienvenido {Nombre Usuario}</h3>
                     <!--botones-->
                     <a href="crear-entrada.php" class="boton boton-verde">{Crear entradas}</a>
                     <a href="crear-categoria.php" class="boton">{Crear categoria}</a>
